Refactored Code for second design and connecting application to database for login

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,4 +25,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.2.1'
     compile 'com.android.support:design:23.2.1'
     compile 'com.github.sundeepk:compact-calendar-view:1.8.3'
+    compile 'com.squareup.okhttp3:okhttp:3.3.1'
 }
