--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,7 +24,7 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.2.1'
     compile 'com.android.support:design:23.2.1'
-    compile 'com.prolificinteractive:material-calendarview:1.4.0'
+    compile 'com.wdullaer:materialdatetimepicker:2.3.0'
     compile 'com.squareup.okhttp3:okhttp:3.3.1'
     compile 'biz.kasual:materialnumberpicker:1.2.1'
     compile 'com.google.android.gms:play-services:8.4.0'
