File changes to include mover class. File changes to include IP_ADDRESS from home and university. Error fix TODO included in shipment activity.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,6 +45,10 @@
             android:label="@string/title_activity_location"
             android:theme="@style/AppTheme" >
         </activity>
+        <activity android:name=".MoverActivity" >
+        </activity>
+        <activity android:name=".MoverDatesActivity" >
+        </activity>
     </application>
 
 </manifest>
